# surety

./: .env.example  .gitattributes  .gitignore  Anchor.toml  Cargo.toml  DEMO_SCRIPT.md  DEPLOY.md  EVIDENCE.md  Makefile  README.md  SUBMISSION.md  next.config.ts  package-lock.json  package.json  tsconfig.json
app/: dashboard.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
app/components/: nav.tsx  policy-composer.tsx  settle-panel.tsx  underwrite-panel.tsx
app/coverage/: page.tsx
app/dashboard/: page.tsx
app/docs/: page.tsx
app/lib/: config.ts  deployer.ts  faucet-action.ts  pda.ts  quote-action.ts  settle-action.ts  surety-client.ts  withdrawal-action.ts
app/props/: page.tsx
app/underwrite/: page.tsx
crates/txline-cpi/: Cargo.toml  README.md
crates/txline-cpi/examples/: validate_stat.rs
crates/txline-cpi/src/: lib.rs
data/: attestations-gate6.jsonl  attestations.jsonl  marker-input-gate6.json  marker-input.json
data/evidence/: gate6-glass-balance-sheet.webm
data/quotes/: gate5-quotes.jsonl
data/recordings/: gate1-live-smoke-odds.raw.sse  gate1-live-smoke-scores.raw.sse  gate1-live-smoke.manifest.json  phase0-18218149-seq1087-final-proof-v2.raw.json  (+26 more)
docs/: FRICTION_LOG.md  GROUND_TRUTH.md  PREDICATE_GRAMMAR.md  PROVABILITY_MATRIX.md  provability-matrix.json
programs/surety_core/: Cargo.toml
programs/surety_core/src/: lib.rs  txline.rs
scripts/: capture-broll.mjs  check-provability-matrix.mjs  setup-halftime-demo.ts  setup-settlement-demo.ts  setup-validated-market.ts  test-suite.mjs  verify-published-txline.mjs
(+38 files in other folders)
