[package]
name = "surety_core"
version = "0.1.0"
description = "SURETY fully collateralized prize indemnity and prop settlement vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "surety_core"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=1.0.2", features = ["init-if-needed"] }
anchor-spl = "=1.0.2"
solana-sha256-hasher = { version = "=3.1.0", features = ["sha2"] }
txline-cpi = { path = "../../crates/txline-cpi", version = "0.1.0" }
